<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
    <variable
        name="DetailsPageObject"
        type="com.gorkemarslanbogan.techcareerbootcampbitirme.ui.Fragment.DetailsPage" />
    </data>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="419dp"
                android:scaleType="centerCrop"
                app:srcCompat="?android:attr/autofilledHighlight" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/details_product_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="85.00 ₺"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"
                    android:textSize="23sp" />

                <TextView
                    android:id="@+id/details_desc_tittle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:text="@string/description"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/details_product_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="5"
                    android:text="@string/str_description" />

                <TextView
                    android:id="@+id/details_delivery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:text="@string/delivery"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_baseline_access_alarm_24" />

                    <TextView
                        android:id="@+id/details_delivery2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="10dp"
                        android:text="@string/delivery_time"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </LinearLayout>

                <Button
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:background="@drawable/button_shape2"
                    android:text="@string/sepete_ekle" />

            </LinearLayout>

        </LinearLayout>
</layout>