<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
    <variable
        name="FoodObject"
        type="com.gorkemarslanbogan.techcareerbootcampbitirme.ui.fragment.Details" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.Details">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="419dp"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/ic_launcher_background" />

                    <TextView
                        android:id="@+id/details_delivery_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="6dp"
                        android:background="@drawable/border_radius"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="Ücretsiz Teslimat"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="normal"
                        tools:ignore="HardcodedText,RtlHardcoded" />

                    <ImageButton
                        android:id="@+id/backButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:background="@null"
                        app:srcCompat="@drawable/ic_baseline_arrow_back_24"
                        tools:ignore="SpeakableTextPresentCheck" />
                </FrameLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/details_product_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="85.00 ₺"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"
                    android:textSize="23sp" />

                <TextView
                    android:id="@+id/details_desc_tittle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:text="@string/description"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/details_product_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="5"
                    android:text="@string/str_description" />

                <TextView
                    android:id="@+id/details_delivery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:text="@string/delivery"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_marginHorizontal="10dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_baseline_access_alarm_24" />

                    <TextView
                        android:id="@+id/details_delivery2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="10dp"
                        android:text="@string/delivery_time"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginStart="50dp"
                        android:orientation="horizontal">

                        <ImageButton
                            android:id="@+id/imageButton3"
                            android:layout_width="27dp"
                            android:layout_height="27dp"
                            android:layout_gravity="left"
                            android:onClick="@{() -> FoodObject.removeStock()}"
                            android:layout_weight="1"
                            android:background="@drawable/ic_baseline_remove_24"
                            android:minHeight="48dp"
                            tools:ignore="OnClick,RtlHardcoded,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                        <EditText
                            android:id="@+id/stockSize"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:layout_marginHorizontal="10dp"
                            android:background="@null"
                            android:minWidth="48dp"
                            android:minHeight="10dp"
                            android:text="0"
                            android:gravity="center_horizontal"
                            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                        <ImageButton
                            android:id="@+id/imageButton4"
                            android:layout_width="27dp"
                            android:layout_height="27dp"
                            android:layout_gravity="left"
                            android:onClick="@{() -> FoodObject.addStock()}"
                            android:layout_weight="1"
                            android:background="@drawable/ic_baseline_exposure_plus_1_24"
                            android:minHeight="48dp"
                            tools:ignore="RtlHardcoded,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                    </LinearLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:background="@drawable/button_shape2"
                    android:text="@string/add_to_card" />

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>
</layout>